--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -16,7 +16,7 @@
 }
 
 .homePage{
-    background-image: url("/images/Poster.jpg");
+    background-image: url("/Poster.jpg");
     background-repeat: no-repeat;
     width: 100%;
     height: 90vh;
